Add responsive spacing between sections

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <body class="bg-offWhite text-armadilloGray font-inter flex flex-col min-h-screen">
 
   <!-- Logo -->
-  <header class="pt-10 text-center">
+  <header class="pt-10 text-center sm:mb-6 md:mb-8">
     <img src="/assets/irondillo-preview.png" alt="Iron Dillo logo"
          class="mx-auto mb-6 w-40 h-auto drop-shadow-md" />
   </header>
 
   <!-- Nav -->
-  <nav class="bg-armadilloBlack text-offWhite rounded-lg shadow-md mb-12 w-11/12 md:w-3/4 mx-auto">
+  <nav class="bg-armadilloBlack text-offWhite rounded-lg shadow-md w-11/12 md:w-3/4 mx-auto sm:mb-6 md:mb-8">
     <div class="flex justify-evenly py-4 text-sm md:text-base">
       <a href="/index.html" class="font-semibold uppercase hover:text-oliveGreen">Home</a>
       <a href="/services.html" class="font-semibold uppercase hover:text-oliveGreen">Services</a>
@@ -47,7 +47,7 @@
   </nav>
 
   <!-- Hero -->
-  <main class="text-center max-w-3xl mx-auto px-6 mb-20">
+  <main class="text-center max-w-3xl mx-auto px-6 sm:mb-6 md:mb-8">
     <h1 class="text-5xl font-extrabold text-oliveGreen mb-8">Iron Dillo Cybersecurity</h1>
     <p class="text-lg leading-relaxed mb-12">
       <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
