--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
       Iron Dillo provides diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
     <div class="flex flex-wrap gap-6 justify-center">
+      <section class="max-w-4xl mx-auto text-center px-6 py-16">
+  <h2 class="text-3xl font-bold text-armadilloBlack mb-6">What Iron Dillo Delivers</h2>
+  <p class="mb-10 text-lg text-armadilloGray leading-relaxed">
+    We believe every business deserves protection. That’s why we provide 
+    hands-on cybersecurity for East Texas individuals, small businesses, 
+    and rural operations — at a scale and cost that makes sense.
+  </p>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+    <div class="bg-offWhite p-6 rounded-lg shadow">
+      <h3 class="font-semibold text-oliveGreen mb-2">Remote Assessments</h3>
+      <p class="text-sm text-armadilloGray">Identify risks in your systems quickly and securely.</p>
+    </div>
+    <div class="bg-offWhite p-6 rounded-lg shadow">
+      <h3 class="font-semibold text-oliveGreen mb-2">Actionable Reports</h3>
+      <p class="text-sm text-armadilloGray">Plain-English documentation, not confusing jargon.</p>
+    </div>
+    <div class="bg-offWhite p-6 rounded-lg shadow">
+      <h3 class="font-semibold text-oliveGreen mb-2">Practical Guidance</h3>
+      <p class="text-sm text-armadilloGray">Steps tailored to your business so you can move forward confidently.</p>
+    </div>
+  </div>
+</section>
       <a href="/lindale-tyler-cybersecurity.html"
          class="bg-white border border-armadilloGray text-armadilloBlack px-8 py-4 rounded-lg shadow hover:border-oliveDark hover:text-oliveGreen transition text-lg font-semibold">
          Lindale & Tyler Cybersecurity
