--- a/index.html
+++ b/index.html
@@ -104,41 +104,21 @@
   <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
     <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
 
-    <!-- Social Icons -->
-    <div class="inline-flex justify-center space-x-10 mb-8">
-      <!-- GitHub -->
-      <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39..."/>
-        </svg>
-      </a>
+   <!-- Social Icons -->
+<div class="inline-flex justify-center space-x-10 mb-8">
+  <!-- GitHub -->
+  <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
+     class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M12 .297c-6.63 0-12 5.373-12 12 
+        0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
+        0-.285-.01-1.04-.016-2.04-3.338.726-4.042-1.61-4.042-1.61
+        -.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729
+        1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.809 1.304 
+        3.495.997.108-.775.419-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.93
+        0-1.31.469-2.38 1.236-3.22-.124-.303-.536-1.527.117-3.176
+        0 0 1.008-.322 3.3 1.23.957-.266 1.983-.399 3.003-.404 
+        1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 
+        3.297-1.23.655 1.649.243 2.873.119 3.176.77.84 
+        1.236 1.91 1.236 3.22 0 4.61-
 
-      <!-- Facebook -->
-      <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M22.675 0h-21.35C.6 0 0 .6..."/>
-        </svg>
-      </a>
-
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M20.447 20.452h-3.554v-5.569c0-1.328..."/>
-        </svg>
-      </a>
-    </div>
-
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
-    <div class="space-x-4 mb-4">
-      <a href="/privacy.html" class="hover:underline">Privacy</a>
-      <a href="/terms.html" class="hover:underline">Terms</a>
-      <a href="/commitment.html" class="hover:underline">Our Commitment</a>
-    </div>
-    <p>&copy; 2025 Iron Dillo. All rights reserved.</p>
-  </footer>
-
-</body>
-</html>
