--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div>
         <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Rooted in East Texas</h2>
         <p class="text-lg text-armadilloGray leading-relaxed"> 
-          We protect the businesses and people our community depends on — 
+          We protect the businesses and people our community depends on 
           with cybersecurity that’s accessible, affordable, and reliable.
         </p>
       </div>
