--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <p class="mb-10 text-lg text-armadilloGray leading-relaxed">
       We believe every business deserves protection. That’s why we provide 
       hands-on cybersecurity for East Texas individuals, small businesses, 
-      and rural operations — at a scale and cost that makes sense.
+      and rural operations at a scale and cost that makes sense.
     </p>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <div class="bg-offWhite p-6 rounded-lg shadow">
