--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </a>
 
       <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn"
+      <a href="https://www.linkedin.com/company/iron-dillo/" target="_blank" aria-label="LinkedIn"
          class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
           <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037
