--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
-  <meta name="description" content="Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
+  <meta name="description" content="We provide honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
