--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
-  <meta name="description" content="We provide honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
+  <meta name="description" content="Iron Dillo provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -54,7 +54,7 @@
       <span class="font-semibold text-armadilloBlack">individuals</span>,
       <span class="font-semibold text-armadilloBlack">small businesses</span>, and
       <span class="font-semibold text-armadilloBlack">rural operations</span> across East Texas.
-      Iron Dillo provides diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
+      We provide diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
   </main>
 
