Remove blog and standardize navigation with security headers

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       }
     }
   </script>
+  <!-- 🛡 Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
   <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
 
@@ -36,13 +43,13 @@
          class="mx-auto mb-6 w-40 h-auto drop-shadow-md" />
   </header>
 
-  <!-- Nav -->
-  <nav class="bg-armadilloBlack text-offWhite rounded-lg shadow-md w-11/12 md:w-3/4 mx-auto sm:mb-6 md:mb-8">
-    <div class="flex justify-evenly py-4 text-sm md:text-base">
-      <a href="/index.html" class="font-semibold uppercase hover:text-oliveGreen">Home</a>
-      <a href="/services.html" class="font-semibold uppercase hover:text-oliveGreen">Services</a>
-      <a href="/about.html" class="font-semibold uppercase hover:text-oliveGreen">About</a>
-      <a href="/contact.html" class="font-semibold uppercase hover:text-oliveGreen">Contact</a>
+  <!-- Navigation -->
+  <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
+    <div class="flex justify-evenly flex-wrap">
+      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
     </div>
   </nav>
 
