--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
     <!-- Story -->
     <section class="bg-white rounded-lg shadow-lg p-10 flex flex-col md:flex-row items-center gap-10">
       <div class="w-48 h-48 md:w-56 md:h-56 flex-shrink-0">
-        <img src="/assets/Dilloman.png" alt="Kris McCoy" class="rounded-full object-cover w-full h-full shadow-md">
+        <img src="/assets/Dilloman.jpg" alt="Kris McCoy" class="rounded-full object-cover w-full h-full shadow-md">
       </div>
       <div>
         <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Meet Kris McCoy</h2>
