Add prominent phone contact to key pages

--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,14 @@
       Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
     </p>
 
+    <div class="bg-armadilloBlack text-offWhite rounded-lg p-6 mb-8 text-center shadow-md">
+      <p class="text-lg font-semibold tracking-wide uppercase">Call Direct</p>
+      <a href="tel:19034023814" class="text-3xl font-bold text-oliveGreen hover:text-oliveDark block mt-2">
+        (903) 402-3814
+      </a>
+      <p class="text-sm mt-3 text-offWhite/80">Reach out for immediate support or to start planning your security strategy.</p>
+    </div>
+
     <form
       id="contact-form"
       action="https://formspree.io/f/xldnbpdg"
