--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
       <span class="font-semibold text-armadilloBlack">rural operations</span> across East Texas.
       We provide diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
+
+    <div class="bg-white border-2 border-oliveGreen rounded-xl py-6 px-4 shadow-lg inline-block">
+      <p class="text-armadilloBlack text-sm uppercase tracking-[0.35em]">Talk To A Real Expert</p>
+      <a href="tel:19034023814" class="block text-4xl font-extrabold text-oliveGreen mt-3">
+        (903) 402-3814
+      </a>
+      <p class="text-armadilloGray mt-2 max-w-xs mx-auto">Call now for immediate cybersecurity support tailored to East Texas.</p>
+    </div>
   </main>
 
   <!-- Split Section with Bluebonnet Image -->
