Add contact details to home and contact footers

--- a/contact.html
+++ b/contact.html
@@ -143,10 +143,28 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
-    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md space-y-4">
+    <div class="flex flex-col sm:flex-row items-center justify-center gap-6 text-base">
+      <div class="text-center sm:text-left">
+        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Phone</p>
+        <a href="tel:19034023814" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
+          (903) 402-3814
+        </a>
+      </div>
+      <span class="hidden sm:inline-flex h-10 border-l border-offWhite/20"></span>
+      <div class="text-center sm:text-left">
+        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Email</p>
+        <a href="mailto:contact@irondillo.com" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
+          contact@irondillo.com
+        </a>
+      </div>
+    </div>
+    <p>&copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned</p>
+    <p>
+      <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a>
+      <span class="text-offWhite/60">|</span>
+      <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+    </p>
   </footer>
 
   <script>
