--- a/index.html
+++ b/index.html
@@ -174,6 +174,22 @@
       </a>
     </div>
 
+    <div class="flex flex-col md:flex-row items-center justify-center gap-6 mb-8 text-sm sm:text-base">
+      <div class="text-center md:text-left">
+        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Phone</p>
+        <a href="tel:19034023814" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
+          (903) 402-3814
+        </a>
+      </div>
+      <span class="hidden md:inline-flex h-10 border-l border-offWhite/20"></span>
+      <div class="text-center md:text-left">
+        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Email</p>
+        <a href="mailto:contact@irondillo.com" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
+          contact@irondillo.com
+        </a>
+      </div>
+    </div>
+
     <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
