--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -117,10 +117,89 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
-    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned |
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> |
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+  <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
+    <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
+
+    <!-- Social Icons -->
+    <div class="inline-flex justify-center space-x-10 mb-8">
+      <!-- GitHub -->
+      <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
+         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M12 .297c-6.63 0-12 5.373-12 12
+            0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
+            0-.285-.01-1.04-.016-2.04-3.338.726-4.042-1.61-4.042-1.61
+            -.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729
+            1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.809 1.304
+            3.495.997.108-.775.419-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.93
+            0-1.31.469-2.38 1.236-3.22-.124-.303-.536-1.527.117-3.176
+            0 0 1.008-.322 3.3 1.23.957-.266 1.983-.399 3.003-.404
+            1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23
+            3.297-1.23.655 1.649.243 2.873.119 3.176.77.84
+            1.236 1.91 1.236 3.22 0 4.61-2.807 5.625-5.479 5.921
+            .43.372.823 1.102.823 2.222 0 1.606-.015 2.896-.015 3.286
+            0 .319.216.694.825.576C20.565 22.092 24 17.592 24 12.297
+            24 5.373 18.627.297 12 .297z"/>
+        </svg>
+      </a>
+
+      <!-- Facebook -->
+      <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
+         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0
+            23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413
+            c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099
+            2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796
+            1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116
+            C23.4 24 24 23.4 24 22.675V1.342C24
+            .6 23.4 0 22.675 0z"/>
+        </svg>
+      </a>
+
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/company/iron-dillo/" target="_blank" aria-label="LinkedIn"
+         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037
+            -1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049
+            c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37
+            4.271 5.452v6.291zM5.337 7.433c-1.144
+            0-2.07-.927-2.07-2.07 0-1.144.926-2.07
+            2.07-2.07 1.143 0 2.07.926
+            2.07 2.07 0 1.143-.927 2.07-2.07
+            2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225
+            0H1.771C.792 0 0 .792 0 1.77v20.451C0
+            23.207.792 24 1.77 24h20.451C23.208 24
+            24 23.207 24 22.222V1.77C24 .792 23.208
+            0 22.225 0z"/>
+        </svg>
+      </a>
+    </div>
+
+    <div class="flex flex-col md:flex-row items-center justify-center gap-6 mb-8 text-sm sm:text-base">
+      <div class="text-center md:text-left">
+        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Phone</p>
+        <a href="tel:19034023814" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
+          (903) 402-3814
+        </a>
+      </div>
+      <span class="hidden md:inline-flex h-10 border-l border-offWhite/20"></span>
+      <div class="text-center md:text-left">
+        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Email</p>
+        <a href="mailto:contact@irondillo.com" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
+          contact@irondillo.com
+        </a>
+      </div>
+    </div>
+
+    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <div class="space-x-4 mb-4">
+      <a href="/privacy.html" class="hover:underline">Privacy</a>
+      <a href="/terms.html" class="hover:underline">Terms</a>
+      <a href="/commitment.html" class="hover:underline">Our Commitment</a>
+    </div>
+    <p>&copy; 2025 Iron Dillo. All rights reserved.</p>
   </footer>
 
 </body>
