Refine marketing pages with Austin-based positioning

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Contact | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Get in touch with Iron Dillo Cybersecurity for consultations, risk assessments, and hands-on cyber defense." />
+  <meta name="description" content="Contact Iron Dillo Cybersecurity, an Austin-based veteran-owned firm providing responsive security consulting and incident coordination across Texas." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -31,7 +31,7 @@
   <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-  <!-- 🛡 Security Headers -->
+  <!-- Security Headers -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="DENY">
@@ -45,11 +45,11 @@
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
-    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="Iron Dillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
   <!-- Navigation -->
-     <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
+  <nav class="bg-armadilloBlack rounded-md mb-8 w-full">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
@@ -60,17 +60,17 @@
 
   <!-- Main Contact Form -->
   <main class="flex-grow max-w-xl w-full bg-white rounded-lg p-8 shadow-lg mx-auto">
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6 text-center">Contact Iron Dillo</h1>
+    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6 text-center">Speak with Our Austin Team</h1>
     <p class="text-armadilloBlack mb-8 text-center">
-      Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
+      Share a few details about your objectives or current challenge and we will respond within one business day with next steps.
     </p>
 
-    <div class="bg-armadilloBlack text-offWhite rounded-lg p-6 mb-8 text-center shadow-md">
-      <p class="text-lg font-semibold tracking-wide uppercase">Call Direct</p>
+    <div class="bg-armadilloBlack text-offWhite rounded-lg p-6 mb-8 text-center">
+      <p class="text-sm font-semibold tracking-wide uppercase text-offWhite/70">Direct line</p>
       <a href="tel:19034023814" class="text-3xl font-bold text-oliveGreen hover:text-oliveDark block mt-2">
         (903) 402-3814
       </a>
-      <p class="text-sm mt-3 text-offWhite/80">Reach out for immediate support or to start planning your security strategy.</p>
+      <p class="text-sm mt-3 text-offWhite/80">Ideal for urgent questions, incident coordination, or executive briefings.</p>
     </div>
 
     <form
@@ -135,7 +135,7 @@
 
       <button
         type="submit"
-        class="w-full mt-4 bg-oliveGreen hover:bg-oliveDark text-white font-bold py-3 rounded-lg shadow-md transition"
+        class="w-full mt-4 bg-oliveGreen hover:bg-oliveDark text-white font-semibold py-3 rounded-lg transition"
       >
         Send Message
       </button>
@@ -144,7 +144,7 @@
 
   <!-- Footer -->
   <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
-    <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
+    <p class="text-oliveGreen font-semibold mb-6">Connect with Iron Dillo</p>
 
     <!-- Social Icons -->
     <div class="inline-flex justify-center space-x-10 mb-8">
@@ -219,7 +219,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="mb-4 text-sm text-offWhite/80">Austin-based and veteran-owned, supporting clients throughout Texas.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
