--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Services | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Explore the cybersecurity services offered by Iron Dillo, focused on protecting East Texas individuals and small businesses with practical, ethical solutions." />
+  <meta name="description" content="Explore Iron Dillo's Austin-based cybersecurity services, delivering structured assessments, policy development, and incident readiness for Texas organizations." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -29,11 +29,7 @@
       }
     }
   </script>
-  <style>
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    .fade-in { animation: fadeIn 1s ease-out both; }
-  </style>
-  <!-- 🛡 Security Headers -->
+  <!-- Security Headers -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="DENY">
@@ -45,12 +41,12 @@
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
   <!-- Logo -->
-  <header class="text-center pt-6 max-w-3xl mx-auto fade-in">
-    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-4 w-32 h-auto" />
+  <header class="text-center pt-6 max-w-3xl mx-auto">
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="Iron Dillo cybersecurity logo" class="mx-auto mb-4 w-32 h-auto" />
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mb-6 w-full fade-in">
+  <nav class="bg-armadilloBlack rounded-md mb-6 w-full">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
@@ -60,63 +56,63 @@
   </nav>
 
   <!-- Page Title -->
-  <section class="text-center mb-10 fade-in">
-    <h1 class="text-4xl font-extrabold text-oliveGreen">Our Services</h1>
-    <p class="text-armadilloGray mt-2">Practical, veteran-owned cybersecurity solutions for East Texas businesses and individuals.</p>
+  <section class="text-center mb-10">
+    <h1 class="text-4xl font-extrabold text-oliveGreen">Professional Services</h1>
+    <p class="text-armadilloGray mt-2">Austin-based cybersecurity consulting tailored to the priorities of Texas leadership teams.</p>
   </section>
 
   <!-- Services Grid -->
-  <main class="flex-grow max-w-4xl mx-auto px-6 py-6 grid gap-8 md:grid-cols-2 fade-in">
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Security Consultations & Risk Assessments</h2>
-      <p class="text-armadilloBlack leading-relaxed">Identify vulnerabilities, understand risks, and receive actionable recommendations in plain English.</p>
+  <main class="flex-grow max-w-4xl mx-auto px-6 py-6 grid gap-8 md:grid-cols-2">
+    <section class="bg-white border border-armadilloGray/30 rounded-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Security Program Assessments</h2>
+      <p class="text-armadilloBlack leading-relaxed">Evaluate current capabilities against business objectives and regulatory expectations with prioritized action plans.</p>
     </section>
 
-    <section class="bg-white rounded-lg shadow-lg p-8">
+    <section class="bg-white border border-armadilloGray/30 rounded-lg p-8">
       <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Cybersecurity Policy & Documentation</h2>
-      <p class="text-armadilloBlack leading-relaxed">Develop custom policies, SOPs, and incident response plans designed for your operations.</p>
+      <p class="text-armadilloBlack leading-relaxed">Develop and refine policies, standards, and response playbooks aligned to frameworks like NIST CSF and CIS Controls.</p>
     </section>
 
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Website & Web Presence Security Audits</h2>
-      <p class="text-armadilloBlack leading-relaxed">Audit websites, forms, and public content for vulnerabilities like XSS, misconfigurations, and more.</p>
+    <section class="bg-white border border-armadilloGray/30 rounded-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Technical Risk Reviews</h2>
+      <p class="text-armadilloBlack leading-relaxed">Assess web applications, cloud configurations, and infrastructure for misconfigurations and exploitable weaknesses.</p>
     </section>
 
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Personal & Small Business Security Training</h2>
-      <p class="text-armadilloBlack leading-relaxed">One-on-one or group training on phishing, password safety, and operational security basics.</p>
+    <section class="bg-white border border-armadilloGray/30 rounded-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Security Awareness Programs</h2>
+      <p class="text-armadilloBlack leading-relaxed">Deliver executive briefings and workforce training that translate threat trends into actionable behavior.</p>
     </section>
 
-    <section class="bg-white rounded-lg shadow-lg p-8">
+    <section class="bg-white border border-armadilloGray/30 rounded-lg p-8">
       <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Incident Response Guidance</h2>
-      <p class="text-armadilloBlack leading-relaxed">Step-by-step guidance during incidents to contain threats, minimize damage, and restore security.</p>
+      <p class="text-armadilloBlack leading-relaxed">Provide structured containment, investigation coordination, and remediation oversight when events occur.</p>
     </section>
 
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Vulnerability Scanning & Reporting</h2>
-      <p class="text-armadilloBlack leading-relaxed">Comprehensive scans with actionable reports highlighting weaknesses and recommended fixes.</p>
+    <section class="bg-white border border-armadilloGray/30 rounded-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Vulnerability Management Support</h2>
+      <p class="text-armadilloBlack leading-relaxed">Coordinate scanning, validation, and remediation cadence with detailed reporting for stakeholders.</p>
     </section>
 
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Secure Configuration</h2>
-      <p class="text-armadilloBlack leading-relaxed">Ensure devices, routers, and networks follow security best practices to reduce risks.</p>
+    <section class="bg-white border border-armadilloGray/30 rounded-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Secure Configuration Reviews</h2>
+      <p class="text-armadilloBlack leading-relaxed">Harden endpoints, network infrastructure, and cloud services against baseline benchmarks.</p>
     </section>
   </main>
 
   <!-- CTA Section -->
-  <section class="text-center mt-12 max-w-2xl mx-auto fade-in">
+  <section class="text-center mt-12 max-w-2xl mx-auto">
     <p class="text-armadilloGray font-semibold mb-4">
-      Need more advanced support? From detailed risk assessments to full remediation,
-      pricing is customized to fit your needs.
+      Engagements are scoped collaboratively to align investment, risk appetite, and timeline.
+      Schedule a consultation to discuss the outcomes your organization needs.
     </p>
-    <a href="/contact.html" class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg">
-      Contact Me for a Free Consultation
+    <a href="/contact.html" class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg">
+      Speak with a Consultant
     </a>
   </section>
   
   <!-- Footer -->
   <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
-    <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
+    <p class="text-oliveGreen font-semibold mb-6">Connect with Iron Dillo</p>
 
     <!-- Social Icons -->
     <div class="inline-flex justify-center space-x-10 mb-8">
@@ -191,7 +187,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="mb-4 text-sm text-offWhite/80">Austin-based and veteran-owned, supporting clients throughout Texas.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
